# solana-redpacket

./: .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  README.md  package.json
app/: .gitignore  components.json  package.json  vite.config.ts
app/src/: routeTree.gen.ts  styles.css
app/src/components/: connect-wallet.tsx  providers.tsx
app/src/components/ui/: combobox.tsx  dropdown-menu.tsx  select.tsx
app/src/lib/: ata.ts  program.ts  rpc.ts  transaction.ts
app/src/routes/: __root.tsx  admin.tsx  claim.$creator.$id.tsx  dashboard.tsx  index.tsx
blinks/: .env.example  Cargo.toml
blinks/scripts/: e2e-test.ts  init-treasury.ts  package-lock.json  package.json
blinks/src/: consts.rs  main.rs  program.rs  router.rs  spec.rs  state.rs
blinks/src/actions/: claim.rs  close.rs  create.rs  mod.rs  registry.rs  utils.rs
demo/: package-lock.json  package.json
demo/scripts/: screenshots.ts
demo/src/: DemoVideo.tsx  Root.tsx  styles.ts
demo/src/components/: BrowserFrame.tsx  ClickEffect.tsx  Cursor.tsx  ZoomContainer.tsx
demo/src/scenes/: ArchTechScene.tsx  BlinksScene.tsx  BrowserClaimScene.tsx  BrowserCreateScene.tsx  ProblemSolutionScene.tsx  SponsorsOutroScene.tsx  TitleScene.tsx
programs/solana-redpacket/: Cargo.toml
programs/solana-redpacket/src/: constants.rs  error.rs  lib.rs  state.rs
programs/solana-redpacket/src/instructions/: claim.rs  close.rs  create.rs  init_treasury.rs  mod.rs  withdraw_fees.rs
tests/: solana-redpacket.ts
