[package]
name = "solana-redpacket"
version = "0.1.0"
description = "Solana red packet program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_redpacket"

[features]
default = []
no-entrypoint = []

[dependencies]
pinocchio = { version = "0.10", features = ["cpi"] }
pinocchio-system = "0.5"
pinocchio-token = "0.5"
solana-program-log = "1.1"
five8_const = "0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
